infrastructure/aws/cloudformation/assignment8.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Description": "Sample CloudFormation Template for CSYE 6225 - Fall 2017",
  "Resources": {
    "EC2Instance": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "ImageId": "ami-cd0f5cb6",
        "InstanceType": "t2.micro",
        "SecurityGroupIds": [
          {
            "Fn::GetAtt": [
              "EC2InstanceSG",
              "GroupId"
            ]
          }
        ],
        "KeyName": "MyKeyPair",
        "SubnetId": {
          "Ref": "ParamSubnetId1"
        },
        "Tags": [
          {
            "Key": "NAME",
            "Value": "CSYE6225"
          }
        ],
        "UserData": {
          "Fn::Base64": {
            "Fn::Join": [
              "",
              [
                "#!/bin/bash -v\n",
                "sudo apt-get update\n",
                "sudo apt-get install python -y\n",
                "curl https://s3.amazonaws.com/aws-cloudwatch/downloads/latest/awslogs-agent-setup.py -O\n",
                "sudo python ./awslogs-agent-setup.py --region us-east-1\n"
              ]
            ]
          }
        }
      }
    },
    "EC2InstanceSG": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Sample EC2Instabce security group",
        "GroupName": "csye6225-webapp1111",
        "VpcId": {
          "Ref": "ParamVpcID"
        }
      }
    },
    "RDSSG": {
      "Type": "AWS::RDS::DBSecurityGroup",
      "Properties": {
        "GroupDescription": "Sample RDS security group",
        "EC2VpcId": {
          "Ref": "ParamVpcID"
        }
      }
    },
    "EC2InstanceSGInboundRule1": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Fn::GetAtt": [
            "EC2InstanceSG",
            "GroupId"
          ]
        }
      }
    },
    "EC2InstanceSGInboundRule2": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Fn::GetAtt": [
            "EC2InstanceSG",
            "GroupId"
          ]
        }
      }
    },
    "EC2InstanceSGInboundRule3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "FromPort": "443",
        "ToPort": "443",
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Fn::GetAtt": [
            "EC2InstanceSG",
            "GroupId"
          ]
        }
      }
    },
    "EC2InstanceSGInboundRule4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "-1",
        "FromPort": "-1",
        "ToPort": "-1",
        "CidrIp": "0.0.0.0/0",
        "GroupId": {
          "Fn::GetAtt": [
            "EC2InstanceSG",
            "GroupId"
          ]
        }
      }
    }
  },
  "Parameters": {
    "ParamVpcID": {
      "Type": "String"
    },
    "ParamSubnetId1": {
      "Type": "String"
    }
  }
}
